UserController - unnecessary lines removed
