# controller/userController.js
@@ -33,23 +33,23 @@ const register = async (req, res, next) => {
       token: null,
     });
 
-     const emailToSend = {
-       to: newUser.email,
-       subject: "SO YUMMY APP email verification",
-       html: `
+    const emailToSend = {
+      to: newUser.email,
+      subject: "SO YUMMY APP email verification",
+      html: `
        <div style="text-align: center;">
        <h1>SO YUMMY APP</h1>
        <p style="font-size:16px;">Verify your e-mail address by clicking on this link - <a href="https://so-yummy-app-backend.vercel.app/api/users/verify/${newUser.verificationToken}" target="_blank" rel="noopener noreferrer nofollow"><strong>Verification Link</strong></a></p>
        </div>
        `,
-     };
-    
+    };
+
     send(emailToSend);
 
     return res.status(201).json({
       status: "Created",
       code: 201,
-      message:"Register Success !",
+      message: "Register Success !",
       data: {
         token: newUser.token,
         email: newUser.email,
@@ -157,12 +157,7 @@ const currentUser = async (req, res, next) => {
   try {
     const _id = req.user;
 
-    const user = await getUserById(_id);
-    if (!user) {
-      throw handleError(404, "User Not Found");
-    }
-
-    const { email, name, id, token, avatar } = user;
+    const { email, name, id, token, avatar } = await getUserById(_id);
 
     res.status(200).json({
       status: "success",
